--- a/Maps/web/generico.css
+++ b/Maps/web/generico.css
@@ -1,9 +1,3 @@
-
-body{
-
-    background-color: #99b4cf;
-}
-
 #page{
     margin-left: 5%;
     margin-right: 5%;
@@ -11,7 +5,7 @@ body{
 }
 
 #head{
-    background-image:url(imagenes/logo.gif);
+    background-image:url(Imagenes/cabeza.jpg);
     background-repeat:no-repeat;
     background-position:center;
     background-size:contain;
@@ -20,7 +14,44 @@ body{
     margin: 0 0 3.2em;
     text-align:center;
 }
+#primario{
+    float: left;
+    margin: 0 -25% 0 0;
+    width: 100%;
+}
 
+#contenidoNormal{
+    margin: 0 25% 0 0;
+    margin-bottom: 15px;
+    background-color: white;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+
+}
+
+#secundario{
+    float: right;
+    width: 20%;
+    background-color: white;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+}
+
+#opciones{
+    margin-top: 20%;
+    padding-top: 20%
+}
+
+#cabezaH2{
+    
+    height: 150px;
+    text-align: center;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-bottom: 55px;
+    padding-top: 6%;
+    
+}
 
 .tablasListados {
     margin:0px;padding:0px;
@@ -115,82 +146,6 @@ body{
 }
 .tablasListados tr:first-child td:last-child{
     border-width:0px 0px 1px 1px;
-}
-
-#primario{
-    float: left;
-    margin: 0 -25% 0 0;
-    width: 100%;
-}
-
-#contenidoNormal{
-
-    
-    margin: 0 25% 0 0;
-    margin-bottom: 15px;
-
-    background-color: white;
-    -webkit-border-radius: 10px 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-
-}
-
-
-
-#contenido{
-
-    margin: 0 35% 0 0;
-    height: 380px;
-    overflow-y: scroll;
-
-    background-color: white;
-}
-
-
-#secundario{
-    float: right;
-    overflow: hidden;
-    width: 20%;
-
-    background-color: white;
-    -webkit-border-radius: 10px 10px 10px 10px;
-    border-radius: 10px 10px 10px 10px;
-
-}
-
-
-
-
-#lista{
-
-}
-
-#cabezaH2{
-    
-    height: 150px;
-    text-align: center;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    border-bottom: 55px;
-    
-}
-
-h2{
-    
-   padding-top: 6%;
-    
-    
-}
-
-#cabeza{
-    
-    text-align: center;
-}
-
-#noticias{
-    
-    margin-top: 25px;
-    margin-bottom: 25px;
 }
 
 .botones {
