--- a/Maps/web/generico.css
+++ b/Maps/web/generico.css
@@ -31,7 +31,10 @@
 
 #secundario{
     float: right;
-    width: 20%;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 200px;
     background-color: white;
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
