--- a/Maps/web/leaflet-routing-machine.css
+++ b/Maps/web/leaflet-routing-machine.css
@@ -1,7 +1,6 @@
 .leaflet-routing-container {
     width: 320px;
     background-color: white;
-    padding-top: 4px;
 }
 
 .hidding-div {
@@ -18,9 +17,7 @@
 }
 
 .leaflet-routing-alt, .leaflet-routing-geocoders {
-    padding: 6px;
-    margin-top: 2px;
-    margin-bottom: 6px;
+    padding-left: 6px;
     border-bottom: 1px solid #ccc;
     max-height: 320px;
     overflow-y: auto;
@@ -33,7 +30,7 @@
 
 .leaflet-routing-alt-minimized {
     color: #888;
-    max-height: 64px;
+    max-height: 20px;
     overflow: hidden;
     cursor: pointer;
 }
