--- a/Maps/web/generico.css
+++ b/Maps/web/generico.css
@@ -144,9 +144,11 @@
 
     background-color:#0057af;
 }
+
 .tablasListados tr:first-child td:first-child{
     border-width:0px 0px 1px 0px;
 }
+
 .tablasListados tr:first-child td:last-child{
     border-width:0px 0px 1px 1px;
 }
@@ -186,12 +188,40 @@
 	text-align:center;
 	text-shadow:1px 1px 0px #cc9f52;
 }
+
 .botones:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
 	background:-moz-linear-gradient( center top, #fb9e25 5%, #ffc477 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ffc477');
 	background-color:#fb9e25;
-}.botones:active {
+}
+
+.botones:active {
 	position:relative;
 	top:1px;
+}
+
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.65);
+    border-radius: 4px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
 }
