--- a/Maps/web/generico.css
+++ b/Maps/web/generico.css
@@ -14,6 +14,15 @@
     margin: 0 0 3.2em;
     text-align:center;
 }
+
+#map {
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    top:0px; 
+    left:0px;
+}
+
 #primario{
     float: left;
     margin: 0 -25% 0 0;
