--- a/Maps/web/generico.css
+++ b/Maps/web/generico.css
@@ -19,8 +19,8 @@
     width: 100%; 
     height: 100%; 
     position: absolute; 
-    top:0px; 
-    left:0px;
+    /*top:0px; 
+    left:0px;*/
 }
 
 #primario{
